# versiref

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONVENTIONS.MD  DESIGN.md  LICENSE  README.md  mkdocs.yml  pydoc-markdown.yml  pyproject.toml  test_all_versions.py
.claude/: settings.json
docs/: reference.md
src/bibl_sacra_pagina/: __init__.py  bible_ref.py  versification.py
src/bibl_sacra_pagina/tests/: test_bible_ref.py
src/versiref/: __init__.py  bible_ref.py  ref_parser.py  ref_style.py  style.py  versification.py
src/versiref/data/book_names/: en-douay-rheims_names.json  en-sbl_abbreviations.json  en-sbl_names.json
src/versiref/data/styles/: en-cmos_long.json  en-cmos_short.json  en-sbl.json  it-cei.json
tests/: test_bible_ref.py  test_parse_and_format.py  test_ref_parser.py  test_style.py  test_versification.py
