[project]
name = "versiref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/versiref"]

[tool.hatch.build.targets.wheel.sources]
"data" = "src/versiref/data"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]
