[project]
name = "versiref"
version = "0.1.0"
description = "A Python package for sophisticated parsing, manipulation, and printing of references to the Bible"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyparsing>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/versiref"]

[tool.hatch.build.targets.wheel.sources]
"data" = "src/versiref/data"

[tool.mypy]
strict = true
exclude = [
    'build',
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
