[project]
name = "versiref"
version = "0.2.1"
description = "A package for sophisticated parsing, manipulation, and printing of references to the Bible"
readme = "README.md"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Religion",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pyparsing>=3.2.3",
]

[project.urls]
Homepage = "https://github.com/fiapps/versiref"
Issues = "https://github.com/fiapps/versiref/issues"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
packages = ["src/versiref"]
include = ["src/versiref/data/**"]

[tool.mypy]
strict = true
exclude = [
    'build',
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
